fix: dark mode

--- a/public/admin_assets/css/sb-admin-2.css
+++ b/public/admin_assets/css/sb-admin-2.css
@@ -11305,10 +11305,27 @@ body.sidebar-toggled footer.sticky-footer {
   transition: all 0.3s ease-in-out; 
 }
 
+
+@keyframes darkenBackground {
+  0% {
+    background-color: #ffffff; /* Start with light background color */
+  }
+  100% {
+    background-color: #424242; /* Transition to dark background color */
+  }
+}
+
+.dark-mode * {
+  transition: color 0.5s ease, background-color 2s ease; /* Smooth transition for text color and background color */
+  animation: darkenBackground 2s ease forwards; /* Apply animation to darken background */
+}
+
 .dark-mode * {
   background-color: #424242 !important; 
   color: #dae6f8 !important;
 }
+
+
 
 
 
